--- a/assets/package.json
+++ b/assets/package.json
@@ -6,10 +6,12 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "mapbox-gl": "^1.9.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "supercluster": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
