--- a/phoenix_static_buildpack.config
+++ b/phoenix_static_buildpack.config
@@ -1,5 +1,5 @@
 # Clean out cache contents from previous deploys
-clean_cache=false
+clean_cache=true
 
 # We can set the version of Node to use for the app here
 node_version=13.7.0
