--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -5,4 +5,4 @@ elixir_version=1.10.2
 # available versions https://github.com/HashNuke/heroku-buildpack-elixir-otp-builds/blob/master/otp-versions
 erlang_version=22.3
 
-always_rebuild=true
+always_rebuild=false
