--- a/assets/package.json
+++ b/assets/package.json
@@ -6,10 +6,11 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "mapbox-gl": "^1.9.1",
+    "mapbox-gl": "^1.10.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "phoenix_live_view": "file:../deps/phoenix_live_view"
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "tippy.js": "^6.2.3"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
