--- a/assets/package.json
+++ b/assets/package.json
@@ -6,7 +6,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
+    "apexcharts": "^3.20.0",
     "mapbox-gl": "^1.10.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
@@ -26,7 +26,7 @@
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-standard": "4.0.1",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "4.0.0",
     "sass-loader": "8.0.2",
     "uglifyjs-webpack-plugin": "^1.2.4",
