--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,11 @@ npm-debug.log
 # The directory NPM downloads your dependencies sources to.
 /assets/node_modules/
 
+# Ignore assets that are produced by build tools.
+/priv/static/assets/
+
+# Ignore digested assets cache.
+/priv/static/cache_manifest.json
 
 # Custom Ignores
 .elixir_ls/
