Maybe fix assets

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -6,3 +6,5 @@ elixir_version=1.10.2
 erlang_version=22.3
 
 always_rebuild=false
+
+hook_post_compile="eval mix assets.deploy && rm -f _build/esbuild"
