--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,5 +1,8 @@
-# Elixir version elixir_version=1.14.2
+# Elixir version 
+elixir_version=1.14.2
 
 # Erlang version
-# available versions https://github.com/HashNuke/heroku-buildpack-elixir-otp-builds/blob/master/otp-versions erlang_version=25.3.2 always_rebuild=false 
+# available versions https://github.com/HashNuke/heroku-buildpack-elixir-otp-builds/blob/master/otp-versions 
+erlang_version=25.3.2
+always_rebuild=false 
 # hook_post_compile="eval mix assets.deploy && rm -f _build/esbuild"
