--- a/assets/package.json
+++ b/assets/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "mapbox-gl": "^1.10.1",
     "tippy.js": "^6.3.7"
+  },
+  "scripts": {
+    "deploy": "cd .. && mix assets.deploy && rm -f _build/esbuild*"
   }
 }
